# analisis-datos-acp

./: README.md  pyproject.toml
persona1_ingesta/: README.md
persona1_ingesta/data/processed/: canal_crudo.csv  canal_limpio.csv  canal_serie_mensual.csv
persona1_ingesta/docs/: FUENTE_DATOS.md
persona1_ingesta/src/: ingesta_canal.py
persona2_pipeline/: README.md
persona2_pipeline/data/processed/: dataset_unificado.csv  dataset_unificado_completo.csv
persona2_pipeline/data/raw/: fuente2_raw.csv
persona2_pipeline/docs/: FUENTE_DATOS.md
persona2_pipeline/src/: ingesta_fuente2.py  pipeline.py
persona3_analisis/: README.md  requirements.txt
persona3_analisis/data/processed/: canal_unificado.csv  (+4 more)
persona3_analisis/docs/: HALLAZGOS.md
persona3_analisis/output/: componente_estacional.csv  descomposicion_serie.csv  estacionalidad_fase_fiscal.csv  impacto_sequia_recuperacion.csv  insights.json  ranking_segmentos.csv  stats_por_segmento.csv  stats_totales.csv  tendencia_anual.csv
persona3_analisis/src/: analisis_tendencias.py  preprocesamiento.py  run_pipeline.py  visualizaciones.py
persona4_modelo/: README.md  requirements.txt
persona4_modelo/docs/: METODOLOGIA.md
persona4_modelo/models/: modelo_transitos.pkl
persona4_modelo/output/: importancia_features.csv  metricas_modelos.csv  predicciones_2026.csv  predicciones_test.csv  resumen_entrenamiento.json
persona4_modelo/src/: entrenamiento.py  prediccion.py  preparacion_datos.py  run_pipeline.py  visualizaciones.py
persona5_dashboard/: README.md  requirements.txt
persona5_dashboard/src/: app.py
(+7 files in other folders)
